А вот теперь Апи ))

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /StudentsApi/StudentsApi/bin/Debug/netcoreapp2.2
+/StudentsApi/.vs/StudentsApi/v16/Server/sqlite3
